--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,8 +1,5 @@
 FROM python:3.8.12-slim-buster
 WORKDIR /app
-
-# TODO YOUR COMMANDS HERE
-# ....
-# ....
-
+COPY . .
+RUN pip install -r worker/requirements.txt
 CMD ["python3", "-m", "worker.app"]
